--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-# Ignore DS_Store files
-*.DS_Store
-data/.DS_Store
+# Ignore DS_Store files... why won't you go away?!
+*/.DS_Store
+/.DS_Store
 
 # Folders
 drafts/
