--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Ignore DS_Store files... why won't you go away?!
+.DS_Store
+.DS_Store?
+
 # Folders
 drafts/
 grants/
@@ -8,6 +12,11 @@ data/environmental/
 # Large data
 data/gaines/*
 data/cmip5/*
+data/eezs
+data/fao
+rshiny/
+dist_shift
+imperfect
 
 # History files
 .Rhistory
